fixed horizontal scroll

--- a/frontend/elections-app/src/components/landingPage.css
+++ b/frontend/elections-app/src/components/landingPage.css
@@ -1,4 +1,4 @@
-#asucr {
-  width: 10px;
-  height: 10px;
+.row {
+  margin: 0;
+  padding: 0;
 }
